# bio-interaction-ml

./: .gitignore  ARCHITECTURE.MD  README.md  main.py  pyproject.toml
base_tool/: train.py
base_tool/archs/: __init__.py  simple_mlp.py
base_tool/data/: __init__.py  base_dataset.py  dummy_dataset.py
base_tool/metrics/: __init__.py  base_metric.py  regression_metrics.py
base_tool/models/: __init__.py  base_model.py  simple_model.py
base_tool/utils/: logger.py  misc.py  options.py  registry.py  scandir.py
base_tool/visualization/: __init__.py  base_visualizer.py  loss_visualizer.py
options/: poc_mlp.yml
